# TAXICF

./: .gitignore  AGENTS.MD  CMakeLists.txt  README.md  TAXICF.cpp
bench/: bench.py
bench/scripts/: eval_classify.py  summarize_pipeline_runs.py
src/classify/: TAXICFClassify.cpp  TAXICFClassify.hpp  classifyConfig.hpp
src/utils/: EM.hpp  Syncmer.hpp  VEM.hpp  syncmer_view.hpp
tests/bench/: bench_smoke_test.sh
tests/icf/: interleaved_cuckoo_filter_test.cpp
tests/utils/: syncmer_test.cpp
